<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNote">

    <EditText
        android:id="@+id/edit_text_add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"

        />
    <EditText
        android:id="@+id/edit_text_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"

        />
    <Button
        android:id="@+id/btn_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"

        />

</LinearLayout>