<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:gravity="center"
        android:textSize="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_of_notes"
        />
    <TextView
        android:id="@+id/stats_text_view_count_of_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/count_of_notes"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_of_words"
        />
    <TextView
        android:id="@+id/stats_text_view_count_of_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/count_of_words"
        />

</LinearLayout>